# ScreenSaverStopper

./: CMakeLists.txt  README.md  main.cpp
