cmake_minimum_required(VERSION 3.15)
project(ScreenSaverStopper)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -O2 -s")
set(CMAKE_EXE_LINKER_FLAGS "-static-libgcc -static-libstdc++")
message(CMAKE_CXX_FLAGS: ${CMAKE_CXX_FLAGS})
add_executable(ScreenSaverStopper WIN32 main.cpp)